# nfsview

./: Cargo.toml  Makefile  README.md  build.rs  nfsview.requirements
.github/workflows/: release.yml
examples/: bpf_smoke.rs
src/: app.rs  main.rs
src/bpf/: nfs_lat.bpf.c
src/model/: types.rs
src/sampler/: mod.rs
src/ui/: hist.rs  latency.rs  mod.rs  servers.rs
tests/: parsers.rs
